--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,3 +2,6 @@
 
 nginx_taku_templates_dir: /etc/nginx_taku
 nginx_taku_sites_enabled_dir: /etc/nginx/sites-enabled
+
+nginx_taku_app_moniker: taku
+nginx_taku_app_home: http://www.takuapp.com
