--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,5 +1,7 @@
 ---
 
+- include_vars: auth.yml
+
 - name: config - templates
   file:
     state=directory
@@ -43,4 +45,12 @@
     src=replywithtaku.me.j2
     dest={{ nginx_taku_sites_enabled_dir }}/replywithtaku.me
 
-
+- name: setup htpasswd
+  htpasswd:
+    state=present
+    path=/etc/nginx/curate_htpasswd
+    name={{ nginx_taku_admin_user }}
+    password={{ nginx_taku_admin_password }}
+    owner=root
+    group=nginx
+    mode=0640
